# quebec

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  quickstart.py  rustfmt.toml  simple_test.py
.github/workflows/: ci.yml  test.yml
public/: blocked-jobs.html  failed-jobs.html  finished-jobs.html  in-progress-jobs.html  index.html  job-details.html  queue-details.html  queues.html  scheduled-jobs.html  workers.html
python/quebec/: __init__.py  __main__.py  context.py  logger.py  sqlalchemy.py  structlog.py  supervisor.py
src/: config.rs  context.rs  continuation.rs  core.rs  database_url.rs  dispatcher.rs  error.rs  lib.rs  memory.rs  notify.rs  process.rs  proctitle_macos.rs  proctitle_unix.rs  query_builder.rs  scheduler.rs  schema_builder.rs  semaphore.rs  supervisor.rs  systemd.rs  types.rs  utils.rs  worker.rs
src/control_plane/: ext.rs  mod.rs  models.rs  templates.rs  utils.rs
src/control_plane/handlers/: blocked_jobs.rs  events.rs  failed_jobs.rs  finished_jobs.rs  health.rs  in_progress_jobs.rs  job_details.rs  mod.rs  overview.rs  queues.rs  recurring_jobs.rs  scheduled_jobs.rs  workers.rs
src/control_plane/static/: stimulus.min.js  turbo.es2017-esm.min.js
src/control_plane/templates/: _pagination.html  base.html  blocked-jobs.html  failed-jobs.html  finished-jobs.html  in-progress-jobs.html  job-details.html  overview.html  queue-details.html  queues.html  recurring-jobs-schedule.html  recurring-jobs.html  scheduled-jobs.html  stats.html  workers.html  workers_frame.html
src/entities/: mod.rs  prelude.rs  quebec_blocked_executions.rs  quebec_claimed_executions.rs  quebec_failed_executions.rs  quebec_jobs.rs  quebec_pauses.rs  quebec_processes.rs  quebec_ready_executions.rs  quebec_recurring_executions.rs  quebec_scheduled_executions.rs  solid_queue_blocked_executions.rs  solid_queue_claimed_executions.rs  solid_queue_failed_executions.rs  solid_queue_jobs.rs  solid_queue_ready_executions.rs  solid_queue_recurring_executions.rs  solid_queue_recurring_tasks.rs  solid_queue_scheduled_executions.rs  solid_queue_semaphores.rs
src/web/: control_plane.rs  mod.rs  templates.rs
src/web/templates/: base.html  blocked-jobs.html  failed-jobs.html  finished-jobs.html  in-progress-jobs.html  job-details.html  overview.html  queue-details.html  queues.html  scheduled-jobs.html  workers.html
tests/: conftest.py  helpers.py  integration_tests.rs  test_around_hooks.py  test_bulk_enqueue_hooks.py  test_claim_ledger.py  test_cleanup.py  test_concurrency.py  test_concurrency_force_fail.py  test_concurrency_strict.py  test_config_validation.py  test_continuation.py  test_continuation_resume.py  test_dispatcher_concurrency_maintenance.py  test_duration_config.py  test_enqueue.py  test_error_strategies.py  test_exclusive_job.py  test_execution.py  test_execution_ops.py  test_experimental_queue_concurrency.py  test_failed_jobs.py  test_failed_ops.py  test_failure.py  test_force_override_queue.py  test_integration.py  test_lifecycle.py  test_lifecycle_api.py  test_logger.py  test_perform_hooks.py  test_queue_pause.py  test_quiet_then_exit.py  test_rate_limit.py  test_recurring.py  test_recurring_discard.py  test_recurring_enqueue_hooks.py  test_retry.py  test_scheduled.py  test_shutdown_release.py  test_sqlite.py  (+6 more)
