[project]
name = "quebec"
version = "0.1.0"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
test = ["pytest < 5.0.0", "pytest-cov[all]"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[dependency-groups]
dev = [
    "maturin-import-hook>=0.1.0",
    "pip>=25.0.1",
    "psycopg2>=2.9.10",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.40",
]
