[project]
name = "quebec"
version = "0.2.3"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
]
description = "Quebec is a simple background task queue for processing asynchronous tasks."
readme = "README.md"
license = "MIT"
authors = [{name = "ratazzi", email = "ratazzi.potts@gmail.com"}]
keywords = ["solid_queue", "postgresql", "mysql", "sqlite", "queue"]

[project.urls]
Documentation = "https://github.com/ratazzi/quebec/REDME.md"
Homepage = "https://github.com/ratazzi/quebec"
Repository = "https://github.com/ratazzi/quebec"

[project.optional-dependencies]
test = ["pytest>=7.0.0", "pytest-cov"]
docs = ["sphinx>=7.0", "shibuya", "myst-parser"]

[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[dependency-groups]
dev = [
    "maturin-import-hook>=0.1.0",
    "pip>=25.0.1",
    "psycopg2>=2.9.10",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.40",
    "pytest>=7.0.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
